# mensa-api

./: Cargo.toml  Dockerfile
src/: cronjobs.rs  db_operations.rs  main.rs  openmensa_funcs.rs  routes.rs  services.rs  stuwe_request_funcs.rs
